--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,42 +1,92 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+main {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.headers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.headers p {
+  color: #e5e4e2;
+  border: 2px solid rgb(89, 89, 89);
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.input-field {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  position: relative;
 }
 
-.card {
-  padding: 2em;
+.input-field input {
+  width: 100%;
+  height: 2rem;
+  border: 2px solid rgb(89, 89, 89);
+  border-radius: 5px;
+  padding: 4px 2.5rem 2px 1rem;
+  outline: none;
+  color: white;
 }
 
-.read-the-docs {
-  color: #888;
+.input-field button {
+  position: absolute;
+  cursor: pointer;
+  right: 15px;
+  top: 50%;
+  background: none;
+  border: none;
+  transform: translateY(-50%);
+  border: none;
+}
+
+.search {
+  font-size: 1.3rem;
+  color: grey;
+  transition: all linear 0.1s;
+}
+
+.search:hover {
+  color: white;
+  transition: all linear 0.1s;
+}
+
+.faqs {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.faqs .ques {
+  color: rgb(89, 89, 89);
+  padding: 0.8rem 0.5rem;
+  border: 1px solid;
+  border-radius: 5px;
+  transition: all linear 0.1s;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.faqs .ques:hover {
+  color: white;
+  border: 1px solid white;
+  transition: all linear 0.1s;
+}
+
+.add{
+  font-size: 2rem;
+  padding: 0;
 }
