--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,5 +1,6 @@
 main {
   margin-top: 3rem;
+  margin-bottom: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,14 +23,14 @@ main {
   border-radius: 5px;
 }
 
-.input-field {
+form {
   width: 50%;
   display: flex;
   justify-content: center;
   position: relative;
 }
 
-.input-field input {
+form input {
   width: 100%;
   height: 2rem;
   border: 2px solid rgb(89, 89, 89);
@@ -39,7 +40,7 @@ main {
   color: white;
 }
 
-.input-field button {
+form button {
   position: absolute;
   cursor: pointer;
   right: 15px;
@@ -86,7 +87,56 @@ main {
   transition: all linear 0.1s;
 }
 
-.add{
+.add {
   font-size: 2rem;
   padding: 0;
+}
+
+.response{
+  box-sizing: border-box;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  border: 1px solid;
+  justify-content: center;
+  min-height: 5rem;
+  border-radius: 5px;
+  max-height: fit-content;
+  padding: 0 0.5rem;
+}
+
+.loading-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: white; /* Dot color */
+  border-radius: 50%; /* Makes the dots circular */
+  margin: 0 5px; /* Space between dots */
+  animation: bounce 1.4s infinite ease-in-out; /* Animation */
+}
+
+/* Delay each dot's animation */
+.dot:nth-child(1) {
+  animation-delay: -0.32s;
+}
+
+.dot:nth-child(2) {
+  animation-delay: -0.16s;
+}
+
+/* Keyframes for the bounce animation */
+@keyframes bounce {
+  0%,
+  80%,
+  100% {
+    transform: translateY(0); /* Dots at the bottom */
+  }
+  40% {
+    transform: translateY(-20px); /* Dots bounce up */
+  }
 }
