--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -4,5 +4,5 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: black;
-  
+  scroll-behavior: smooth;
 }
